
  User-visible changes:
   * Tweak messagebox texts
   * Enable/disable link list dynamically
   * Tweak various messages
   * Change: Open "Add link" dialog if list is empty and "Download" is clicked
     1. This previously showed a messagebox telling user to add a link
   * Fix: Preferences: various browse buttons
     1. These were mysteriously missing signal-slot details in prefs.ui (again)


Version 0.4.0
(July 5, 2009)

  User-visible changes:
   * Add: Scan feature to scan *any* web pages for video links
     1. Supports regular Youtube links and embedded ones
     2. Above means that it can be used to grab videos from Youtube playlists
     3. Intended to replace clivescan utility (of the clive-utils project)
   * Add: Edit / Add / Paste (+key shortcut)
   * Add: Clear list (button +menu item)
   * Fix: RSS/Scan: Check for URL scheme in input link; insert if missing
   * Fix: RSS/Scan: Disabling HTTP proxy is now respected
   * Enable editing links in main window and RSS feed manager (double-click)
   * Enable/disable misc. widgets at start and end
   * Use 16x16 for all icons
   * Update misc. tooltip messages


Version 0.3.0
(June 21, 2009)

FOREWORD

It is now also possible to download multiple videos on one go.
This was previously limited by design.

We are in the process of merging clive-utils into abby. RSS feed
parsing (clivefeed) has already been implemented. Video link scan
(clivescan) should be implemented in abby by 0.4.0.

  User-visible changes:
   * Add: --format=best support
   * Add: RSS parsing (obsoletes clivefeed in clive-utils)
   * Add: Keyboard shortcuts (e.g. add link, start download)
   * Fix: Tab orders (e.g. main window: paste button)
   * Change: Multi-link support
   * Change: Video format selection
     1. Format dialog for hosts that support multiple video formats
     2. All other hosts default to "flv"
   * Change: More responsive UI when closing Preferences while using clive